# web-log-analytics-pipeline

./: .gitignore  README.md  pyproject.toml
source/log_analysis/: cli.py  config.py  log_analyze.py  models.py  parser.py  processing.py  validation.py  writers.py
tests/: conftest.py  test_analyze_log.py  test_parser.py  test_processing.py  test_writers.py
