[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "web-log-analytics-pipeline"
version = "0.2.0"
description = "Production-minded Python pipeline for parsing web logs, quarantining malformed records, validating outputs, and generating analytics reports."
requires-python = ">=3.11"